--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -47,8 +47,8 @@ services:
       TEST_MODE: "DOCKER"
       API_BEARER: "${API_BEARER}"
       HOST_BACKEND: "http://api-gateway:80"
-      STRIPE_PRIVATE_KEY: "${STRIPE_PRIVATE_KEY}"
-      STRIPE_PUBLIC_KEY: "${STRIPE_PUBLIC_KEY}"
-      SELENIUM_TIMEOUT: "${SELENIUM_TIMEOUT}"
-      SKIP_SELENIUM_TESTS: "${SKIP_SELENIUM_TESTS}"
+      STRIPE_PRIVATE_KEY:
+      STRIPE_PUBLIC_KEY:
+      SELENIUM_TIMEOUT:
+      SKIP_SELENIUM_TESTS:
 
