--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,12 +5,22 @@ services:
   api-gateway:
     ports:
       - "9010:80"
-      
+
+  backend:
+    environment:
+      HOST_FRONTEND: 'http://admin'
+      HOST_BACKEND: 'http://api-gateway'
+      HOST_PUBLIC: 'http://public'
+
   public:
+    environment:
+      HOST_BACKEND: 'http://api-gateway'
     ports:
       - "9011:80"
       
   admin:
+    environment:
+      HOST_BACKEND: 'http://api-gateway'
     ports:
       - "9009:80"
 
@@ -37,6 +47,8 @@ services:
       - makeradmin
     command:
       - "/work/run.sh"
+    volumes:
+      - .test:/work/.test
     depends_on:
       - admin
       - public
@@ -44,10 +56,12 @@ services:
       - selenium
     environment:
       WEBDRIVER_TYPE: "REMOTE_CHROME"
-      TEST_MODE: "DOCKER"
       API_BEARER: "${API_BEARER}"
-      HOST_BACKEND: "http://api-gateway:80"
+      HOST_FRONTEND: 'http://admin'
+      HOST_BACKEND: 'http://api-gateway'
+      HOST_PUBLIC: 'http://public'
       STRIPE_PRIVATE_KEY:
       STRIPE_PUBLIC_KEY:
-      SELENIUM_TIMEOUT:
       SKIP_SELENIUM_TESTS:
+      SELENIUM_BASE_TIMEOUT:
+      SELENIUM_SCREENSHOT_DIR: "/work/.test/selenium-screenshots"
