#43 Migrations and firstrun now works again.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,6 +3,9 @@ services:
   api-gateway:
     ports:
       - "8010:80"
+  api:
+    ports:
+      - "8012:80"
   public:
     ports:
       - "8011:80"
