--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,12 @@ services:
       MYSQL_PORT:
       MYSQL_USER:
       MYSQL_PASS:
+      MEMBERSHIP_HOST:
+      SHOP_HOST:
+      MEMBER_HOST:
+      MESSAGES_HOST:
+      EMAIL_DISPATCHER_HOST:
+      MULTIACCESS_SYNC_HOST:
       VIRTUAL_HOST: "${HOST_BACKEND}"
       LETSENCRYPT_HOST: "${HOST_BACKEND}"
       LETSENCRYPT_EMAIL: "${ADMIN_EMAIL}"
