#43 Changed config to be urls instead of hosts.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,13 +78,12 @@ services:
       MYSQL_PORT:
       MYSQL_USER:
       MYSQL_PASS:
-      # TODO Rename to url
-      MEMBERSHIP_HOST:
-      SHOP_HOST:
-      MEMBER_HOST:
-      MESSAGES_HOST:
-      EMAIL_DISPATCHER_HOST:
-      MULTIACCESS_SYNC_HOST:
+      MEMBERSHIP_URL:
+      SHOP_URL:
+      MEMBER_URL:
+      MESSAGES_URL:
+      EMAIL_DISPATCHER_URL:
+      MULTIACCESS_SYNC_URL:
       VIRTUAL_HOST: "${HOST_BACKEND}"
       LETSENCRYPT_HOST: "${HOST_BACKEND}"
       LETSENCRYPT_EMAIL: "${ADMIN_EMAIL}"
