--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,11 +1,11 @@
 version: "3"
 services:
-  api-gateway:
-    ports:
-      - "8010:80"
+  # api-gateway:
+  #   ports:
+  #     - "8010:80"
   api:
     ports:
-      - "8012:80"
+      - "8010:80"
   public:
     ports:
       - "8011:80"
