--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,31 +38,32 @@ services:
     networks:
       - makeradmin
 
-  api-gateway:
-    image: makeradmin/apigateway:1.0
-    build:
-      context: ./apigateway
-      dockerfile: ${PWD}/library/DockerfileService
-    volumes:
-      - ./logs/apigateway:/var/www/html/storage/logs
-    depends_on:
-      - db2
-      - servicebase
-      - library
-      - api
-    networks:
-      - makeradmin
-    environment:
-      APP_DEBUG:
-      MYSQL_HOST: "db2:${MYSQL_PORT}"
-      MYSQL_DB: "makeradmin"
-      MYSQL_USER:
-      MYSQL_PASS:
-      APIGATEWAY: "${APIGATEWAY:-api}"
-      BEARER: "${API_BEARER}"
-      VIRTUAL_HOST: "${HOST_BACKEND}"
-      LETSENCRYPT_HOST: "${HOST_BACKEND}"
-      LETSENCRYPT_EMAIL: "${ADMIN_EMAIL}"
+# TODO BM remove api-gateway      
+#   api-gateway:
+#     image: makeradmin/apigateway:1.0
+#     build:
+#       context: ./apigateway
+#       dockerfile: ${PWD}/library/DockerfileService
+#     volumes:
+#       - ./logs/apigateway:/var/www/html/storage/logs
+#     depends_on:
+#       - db2
+#       - servicebase
+#       - library
+#       - api
+#     networks:
+#       - makeradmin
+#     environment:
+#       APP_DEBUG:
+#       MYSQL_HOST: "db2:${MYSQL_PORT}"
+#       MYSQL_DB: "makeradmin"
+#       MYSQL_USER:
+#       MYSQL_PASS:
+#       APIGATEWAY: "${APIGATEWAY:-api}"
+#       BEARER: "${API_BEARER}"
+#       VIRTUAL_HOST: "${HOST_BACKEND}"
+#       LETSENCRYPT_HOST: "${HOST_BACKEND}"
+#       LETSENCRYPT_EMAIL: "${ADMIN_EMAIL}"
 
   api:
     image: makeradmin/api:1.0
@@ -108,7 +109,6 @@ services:
       STRIPE_PUBLIC_KEY:
       STRIPE_SIGNING_SECRET:
     depends_on:
-      - api-gateway
       - api
     networks:
       - makeradmin
@@ -143,7 +143,6 @@ services:
       APIGATEWAY: "${APIGATEWAY:-api}"
       BEARER: "${API_BEARER}"
     depends_on:
-      - api-gateway
       - api
     networks:
       - makeradmin
@@ -163,7 +162,6 @@ services:
       APIGATEWAY: "${APIGATEWAY:-api}"
       BEARER: "${API_BEARER}"
     depends_on:
-      - api-gateway
       - api
     networks:
       - makeradmin
@@ -185,7 +183,6 @@ services:
       MAILGUN_FROM:
       MAILGUN_TO_OVERRIDE:
     depends_on:
-      - api-gateway
       - api
       - messages
     networks:
@@ -202,7 +199,6 @@ services:
       APIGATEWAY: "${APIGATEWAY:-api}"
       BEARER: "${API_BEARER}"
     depends_on:
-      - api-gateway
       - api
     networks:
       - makeradmin
