#43 Added dot env reader.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -53,7 +53,7 @@ services:
       - selenium
     environment:
       WEBDRIVER_TYPE: "REMOTE_CHROME"
-      API_BEARER: "${API_BEARER}"
+      API_BEARER:
       HOST_FRONTEND: 'http://admin'
       HOST_BACKEND: 'http://${APIGATEWAY:-api}'
       HOST_PUBLIC: 'http://public'
