--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,7 @@ services:
     networks:
       - makeradmin
     environment:
-      BEARER: "${API_BEARER}"
+      API_BEARER:
       APP_DEBUG:
       MYSQL_HOST: db2
       MYSQL_DB:
