#43 Added unittests for authentication code.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -2,6 +2,10 @@ version: "3"
 
 services:
 
+  api:
+    environment:
+      TEST: "true"
+
   backend:
     environment:
       HOST_FRONTEND: 'http://admin'
