--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ services:
   - docker
 
 python:
-  - "3.7-dev"
+  - "3.6"
 
 before_install:
   - docker --version
   - docker-compose --version
-  - pip3 install -r requirements.txt
+  - pip3 install docker-compose
 
 install:
   - make build
