#43 Reverted, did not work.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ python:
 before_install:
   - docker --version
   - docker-compose --version
-  - pip3 install docker-compose
+  - pip3 install -r requirements.txt
 
 install:
   - make build
