--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,17 +5,6 @@ services:
     ports:
       - "3306:3306"
 
-  # TODO BM Remove
-  # api-gateway:
-  #   volumes:
-  #     - ./apigateway/lumen/routes:/var/www/html/routes
-  #     - ./apigateway/lumen/app:/var/www/html/app
-  #     - ./test/src/Makeradmin:/var/www/html/test
-  #   ports:
-  #     - "8010:80"
-  #   environment:
-  #     APP_DEBUG: "true"
-
   api:
     volumes:
       - ./api/src:/work/src
@@ -28,26 +17,26 @@ services:
     volumes:
       - ./membership/lumen/routes:/var/www/html/routes
       - ./membership/lumen/app:/var/www/html/app
-      - ./test/src/Makeradmin:/var/www/html/test
+      - ./library/src/Makeradmin:/var/www/html/library
 
   messages:
     volumes:
       - ./messages/lumen/routes:/var/www/html/routes
       - ./messages/lumen/app:/var/www/html/app
-      - ./test/src/Makeradmin:/var/www/html/test
+      - ./library/src/Makeradmin:/var/www/html/library
 
   email-dispatcher:
     volumes:
       - ./emaildispatcher/lumen/routes:/var/www/html/routes
       - ./emaildispatcher/lumen/app:/var/www/html/app
-      - ./test/src/Makeradmin:/var/www/html/test
+      - ./library/src/Makeradmin:/var/www/html/library
 
   multiaccesssync:
     volumes:
       - ./data/multiaccess-uploads:/var/www/html/storage/uploads
       - ./multiaccesssync/lumen/routes:/var/www/html/routes
       - ./multiaccesssync/lumen/app:/var/www/html/app
-      - ./test/src/Makeradmin:/var/www/html/test
+      - ./library/src/Makeradmin:/var/www/html/library
 
   backend:
     volumes:
