--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ python:
 before_install:
   - docker --version
   - docker-compose --version
-  - pip3 install -r requirements.txt
+  - pip3 install docker-compose
 
 install:
   - make build
