--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,7 @@ services:
       STRIPE_SIGNING_SECRET:
     depends_on:
       - api
+      - servicebase
     networks:
       - makeradmin
       
@@ -119,6 +120,7 @@ services:
       BEARER: "${API_BEARER}"
     depends_on:
       - api
+      - library
     networks:
       - makeradmin
 
@@ -138,6 +140,7 @@ services:
       BEARER: "${API_BEARER}"
     depends_on:
       - api
+      - library
     networks:
       - makeradmin
 
@@ -160,6 +163,7 @@ services:
     depends_on:
       - api
       - messages
+      - library
     networks:
       - makeradmin
 
@@ -175,6 +179,7 @@ services:
       BEARER: "${API_BEARER}"
     depends_on:
       - api
+      - library
     networks:
       - makeradmin
 
