Revert "#43 Started on membership conversion."
This reverts commit 732f53f165528ba6f491f93bfb63b7ab8629b784.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,7 @@ services:
       STRIPE_SIGNING_SECRET:
     depends_on:
       - api
+      - servicebase
     networks:
       - makeradmin
       
