--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,3 +1,4 @@
+# Runtime requirements
 flask
 flask_cors
 sqlalchemy
@@ -6,7 +7,11 @@ rocky>=1,<2
 PyMySQL
 requests
 python-dotenv
+bcrypt
+stripe
+
+# Test requirements
 pytest
 pytest-parallel
-bcrypt
+selenium
 faker
