--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -53,6 +53,11 @@ services:
       - api
       - selenium
     environment:
+      MYSQL_HOST: db2
+      MYSQL_DB:
+      MYSQL_PORT:
+      MYSQL_USER:
+      MYSQL_PASS:
       WEBDRIVER_TYPE: "REMOTE_CHROME"
       API_BEARER:
       HOST_FRONTEND: 'http://admin'
