Initial implementation of service logging

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -13,7 +13,9 @@ RUN apk update \
        linux-headers \
     && rm -rf /var/cache/apk/*
 
-RUN mkdir -p /work/
+RUN mkdir -p /work/ && mkdir -p /work/logs
+
+VOLUME /work/logs
 
 COPY requirements.txt /work
 
