--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,26 +103,27 @@ services:
       LETSENCRYPT_EMAIL: "${ADMIN_EMAIL}"
     networks:
       - makeradmin
-      
-  messages:
-    image: makeradmin/messages:1.0
-    build:
-      context: ./messages
-      dockerfile: ${PWD}/library/DockerfileService
-    volumes:
-      - ./logs/messages:/var/www/html/storage/logs
-    environment:
-      MYSQL_HOST: "db2:${MYSQL_PORT}"
-      MYSQL_DB: "makeradmin"
-      MYSQL_USER:
-      MYSQL_PASS:
-      APIGATEWAY: "api"
-      BEARER: "${API_BEARER}"
-    depends_on:
-      - api
-      - library
-    networks:
-      - makeradmin
+
+#  TODO
+#  messages:
+#    image: makeradmin/messages:1.0
+#    build:
+#      context: ./messages
+#      dockerfile: ${PWD}/library/DockerfileService
+#    volumes:
+#      - ./logs/messages:/var/www/html/storage/logs
+#    environment:
+#      MYSQL_HOST: "db2:${MYSQL_PORT}"
+#      MYSQL_DB: "makeradmin"
+#      MYSQL_USER:
+#      MYSQL_PASS:
+#      APIGATEWAY: "api"
+#      BEARER: "${API_BEARER}"
+#    depends_on:
+#      - api
+#      - library
+#    networks:
+#      - makeradmin
 
   email-dispatcher:
     image: makeradmin/messages-dispatcher-email:1.0
@@ -142,7 +143,6 @@ services:
       MAILGUN_TO_OVERRIDE:
     depends_on:
       - api
-      - messages
       - library
     networks:
       - makeradmin
