#53 Change to use volume to get rid of pesky logs directory.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -2,6 +2,10 @@ version: "3"
 
 services:
 
+  db2:
+    volumes:
+      - logs:/var/www/html/storage/logs
+      
   api:
     volumes:
       - logs:/work/logs
