--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,6 +4,8 @@ services:
   db2:
     ports:
       - "3306:3306"
+    volumes:
+      - logs:/var/www/html/storage/logs
 
   api:
     volumes:
@@ -17,7 +19,6 @@ services:
   email-dispatcher:
     volumes:
       - ./api/src:/work/src
-      - logs:/work/logs
 
   backend:
     volumes:
