#55 Converted implemnetation of sending login emails.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,9 +39,7 @@ services:
       MYSQL_USER:
       MYSQL_PASS:
       SHOP_URL:
-      MEMBER_URL:
-      MESSAGES_URL:
-      EMAIL_DISPATCHER_URL:
+      HOST_PUBLIC:
       VIRTUAL_HOST: "${HOST_BACKEND}"
       LETSENCRYPT_HOST: "${HOST_BACKEND}"
       LETSENCRYPT_EMAIL: "${ADMIN_EMAIL}"
