--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       STRIPE_PRIVATE_KEY:
       STRIPE_PUBLIC_KEY:
       STRIPE_SIGNING_SECRET:
+      CORS_ALLOWED_ORIGINS:
 
   email-dispatcher:
     image: makeradmin/api:1.0
