--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -11,6 +11,7 @@ services:
       - logs:/work/logs
     environment:
       TEST: "true"
+      CORS_ALLOWED_ORIGINS: 'http://admin,http://api,http://public'
 
   backend:
     environment:
