Fixed firstrun that was broken by changes to webshop.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       MYSQL_USER:
       MYSQL_PASS:
       HOST_PUBLIC:
+      HOST_FRONTEND:
       VIRTUAL_HOST: "${HOST_BACKEND}"
       LETSENCRYPT_HOST: "${HOST_BACKEND}"
       LETSENCRYPT_EMAIL: "${ADMIN_EMAIL}"
