--- a/admin/package.json
+++ b/admin/package.json
@@ -32,7 +32,7 @@
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-15": "^1.1.0",
     "eslint": "^5.14.1",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react": "^7.13.0",
     "jest": "^24.1.0",
     "react-test-renderer": "^15.6.2",
     "style-loader": "^0.23.0",
@@ -47,7 +47,7 @@
     "dev": "./node_modules/.bin/webpack-dev-server --mode development",
     "build": "./node_modules/.bin/webpack",
     "test": "jest",
-    "eslint": "eslint src"
+    "eslint": "eslint src --ext .js --ext .jsx"
   },
   "author": "",
   "babel": {
@@ -126,6 +126,11 @@
       "semi": "error",
       "react/prop-types": "off",
       "react/display-name": "off"
+    },
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
     }
   }
 }
