--- a/multiaccess-program/requirements.txt
+++ b/multiaccess-program/requirements.txt
@@ -1,4 +1,3 @@
-jsonschema
 # Keeping all dependencies in one file for simplicity. Pyinstaller
 # will only pick direct depencencies into the windows runtime.
 
@@ -9,6 +8,7 @@ pytz
 psutil
 requests
 iso8601
+jsonschema==2.6.0
 
 # Build/test dependencies
 pyinstaller
