--- a/public/package.json
+++ b/public/package.json
@@ -16,7 +16,8 @@
     },
     "dependencies": {
         "@types/stripe-v3": "^3.0.8",
-        "chart.js": "^2.7.3"
+        "chart.js": "^2.7.3",
+        "npm": "^6.10.1"
     },
     "scripts": {
         "build": "./node_modules/.bin/webpack",
