--- a/.travis.yml
+++ b/.travis.yml
@@ -12,16 +12,23 @@ python:
 jobs:
   include:
     # Multiaccess-program tests
-    - install:
+    - before_install:
+        - sudo apt update
+        - sudo apt install unixodbc-dev
+      install:
         - make -C multiaccess-program/ init
       script:
         - make -C multiaccess-program/ test
+      sudo: required
       env:
         PROJECT: "multiaccess-program"
         PURPOSE: "test"
 
     # Multiaccess-program make dist
-    - install:
+    - before_install:
+        - sudo apt update
+        - sudo apt install unixodbc-dev
+      install:
         - make -C multiaccess-program/ init
       script:
         - make -C multiaccess-program/ dist
