Converted to lowecase todos since have not been touched for half a year.

--- a/api/src/pytest.ini
+++ b/api/src/pytest.ini
@@ -3,5 +3,5 @@ filterwarnings =
     error
     ignore::DeprecationWarning:
 
-# TODO ignore DeprecationWarning is too wide, but does not manage to match actual error
+# todo: ignore DeprecationWarning is too wide, but does not manage to match actual error
 
