--- a/api/src/pytest.ini
+++ b/api/src/pytest.ini
@@ -1,7 +1,8 @@
 [pytest]
 filterwarnings =
     error
-    ignore::DeprecationWarning:
+    # This filter does not work, not sure why:
+    ignore::SyntaxWarning:sqlalchemy.orm.query
+    ignore::DeprecationWarning:rocky.config
 
-# todo: ignore DeprecationWarning is too wide, but does not manage to match actual error
 
