--- a/admin/package.json
+++ b/admin/package.json
@@ -10,6 +10,7 @@
     "history": "^4.9.0",
     "jquery": "^3.4.1",
     "json-loader": "^0.5.4",
+    "npm": "^6.13.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-day-picker": "^7.3.0",
