#120 Changed name of API_BEARER to TEST_SERVICE_TOKEN.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -59,7 +59,7 @@ services:
       MYSQL_USER:
       MYSQL_PASS:
       WEBDRIVER_TYPE: "REMOTE_CHROME"
-      API_BEARER:
+      TEST_SERVICE_TOKEN:
       HOST_FRONTEND: 'http://admin'
       HOST_BACKEND: 'http://api'
       HOST_PUBLIC: 'http://public'
