--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -12,6 +12,7 @@ services:
     environment:
       TEST: "true"
       CORS_ALLOWED_ORIGINS: 'http://admin,http://api,http://public'
+      TEST_SERVICE_TOKEN:
 
   public:
     environment:
