--- a/admin/package.json
+++ b/admin/package.json
@@ -7,42 +7,46 @@
   "license": "GPL-3.0",
   "dependencies": {
     "classnames": "^2.2.5",
-    "history": "^4.9.0",
-    "jquery": "^3.5.0",
+    "history": "^4.10.1",
+    "jquery": "^3.5.1",
     "json-loader": "^0.5.4",
-    "npm": "^6.14.4",
+    "npm": "^6.14.7",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-day-picker": "^7.3.0",
-    "react-dom": "^16.8.6",
-    "react-router": "^3.2.3",
+    "react": "^16.13.1",
+    "react-day-picker": "^7.4.8",
+    "react-dom": "^16.13.1",
+    "react-router": "^3.2.6",
     "react-select": "^2.4.4",
+    "typescript": "3.9.7",
     "uikit": "^2.27.4",
-    "underscore": "^1.8.3"
+    "underscore": "^1.10.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.4.4",
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/register": "^7.10.5",
+    "@types/react": "^16.8.6",
+    "@types/react-dom": "^16.8.6",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^8.2.6",
     "babel-jest": "^25.5.1",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "css-loader": "^1.0.1",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
     "eslint": "^5.16.0",
-    "eslint-plugin-react": "^7.14.2",
-    "jest": "^25.5.2",
-    "react-test-renderer": "^16.0.0",
+    "eslint-plugin-react": "^7.20.5",
+    "jest": "^25.5.4",
+    "react-test-renderer": "^16.13.1",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.35.3",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-merge": "^4.2.1"
+    "ts-loader": "^8.0.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.44.1",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2"
   },
   "scripts": {
     "dev": "./node_modules/.bin/webpack-dev-server --mode development",
