--- a/admin/package.json
+++ b/admin/package.json
@@ -15,7 +15,8 @@
     "react": "^16.13.1",
     "react-day-picker": "^7.4.8",
     "react-dom": "^16.13.1",
-    "react-router": "^3.2.6",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-select": "^2.4.4",
     "typescript": "3.9.7",
     "uikit": "^2.27.4",
@@ -28,6 +29,8 @@
     "@babel/register": "^7.10.5",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.6",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.5",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^8.2.6",
     "babel-jest": "^25.5.1",
