--- a/public/package.json
+++ b/public/package.json
@@ -12,12 +12,16 @@
         "webpack": "^4.35.3",
         "webpack-cli": "^3.3.6",
         "webpack-dev-server": "^3.7.2",
-        "webpack-merge": "^4.1.4"
+        "webpack-merge": "^4.1.4",
+        "@types/react": "^16.9.0",
+        "@types/react-dom": "^16.9.0"
     },
     "dependencies": {
         "@types/stripe-v3": "^3.1.4",
         "chart.js": "^2.8.0",
-        "npm": "^6.14.4"
+        "npm": "^6.14.4",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1"
     },
     "scripts": {
         "build": "./node_modules/.bin/webpack",
