--- a/public/package.json
+++ b/public/package.json
@@ -6,20 +6,20 @@
     "repository": "https://github.com/makerspace/makeradmin",
     "license": "GPL-3.0",
     "devDependencies": {
-        "sass-loader": "^7.1.0",
+        "@types/react": "^16.9.49",
+        "@types/react-dom": "^16.9.0",
+        "sass-loader": "^7.3.1",
         "ts-loader": "^5.4.5",
-        "typescript": "^3.5.3",
-        "webpack": "^4.35.3",
-        "webpack-cli": "^3.3.6",
-        "webpack-dev-server": "^3.7.2",
-        "webpack-merge": "^4.1.4",
-        "@types/react": "^16.9.0",
-        "@types/react-dom": "^16.9.0"
+        "typescript": "^3.9.7",
+        "webpack": "^4.44.1",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0",
+        "webpack-merge": "^4.2.2"
     },
     "dependencies": {
-        "@types/stripe-v3": "^3.1.4",
-        "chart.js": "^2.8.0",
-        "npm": "^6.14.4",
+        "@types/stripe-v3": "^3.1.20",
+        "chart.js": "^2.9.3",
+        "npm": "^6.14.8",
         "react": "^16.13.1",
         "react-dom": "^16.13.1"
     },
