--- a/public/package.json
+++ b/public/package.json
@@ -6,8 +6,6 @@
     "repository": "https://github.com/makerspace/makeradmin",
     "license": "GPL-3.0",
     "devDependencies": {
-        "@types/react": "^16.14.5",
-        "@types/react-dom": "^16.9.12",
         "sass-loader": "^7.3.1",
         "ts-loader": "^5.4.5",
         "typescript": "^3.9.9",
@@ -20,8 +18,7 @@
         "@types/stripe-v3": "^3.1.23",
         "chart.js": "^2.9.4",
         "npm": "^6.14.13",
-        "react": "^16.14.0",
-        "react-dom": "^16.14.0"
+        "preact": "^10.5.13"
     },
     "scripts": {
         "build": "./node_modules/.bin/webpack",
