--- a/admin/package.json
+++ b/admin/package.json
@@ -10,7 +10,7 @@
     "history": "^4.10.1",
     "jquery": "^3.6.0",
     "json-loader": "^0.5.4",
-    "npm": "^6.14.13",
+    "npm": "^7.9.0",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-day-picker": "^7.4.10",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
+    "@babel/eslint-parser": "^7.13.14",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "@babel/register": "^7.13.14",
@@ -33,13 +34,12 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/underscore": "^1.11.1",
     "babel-core": "^7.0.0-0",
-    "babel-eslint": "^8.2.6",
-    "babel-jest": "^25.5.1",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^1.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "eslint": "^5.16.0",
+    "eslint": "^7.24.0",
     "eslint-plugin-react": "^7.23.2",
     "jest": "^25.5.4",
     "react-test-renderer": "^16.14.0",
@@ -85,7 +85,7 @@
       "__BUILD_DATE__": "readonly",
       "__COMMIT_HASH__": "readonly"
     },
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
     "plugins": [
       "react"
     ],
