--- a/api/src/pytest.ini
+++ b/api/src/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 filterwarnings =
     error
-    # This filter does not work, not sure why:
-    ignore::SyntaxWarning:sqlalchemy.orm.query
     ignore::DeprecationWarning:rocky.config
+    # selenium not closed in some test, not sure why
+    ignore:.*4444.*:ResourceWarning:selenium.webdriver.remote.remote_connection
