--- a/public/package.json
+++ b/public/package.json
@@ -15,10 +15,12 @@
         "webpack-merge": "^4.2.2"
     },
     "dependencies": {
+        "@types/sanitize-html": "^2.3.2",
         "@types/stripe-v3": "^3.1.23",
         "chart.js": "^2.9.4",
         "npm": "^6.14.13",
-        "preact": "^10.5.13"
+        "preact": "^10.5.13",
+        "sanitize-html": "^2.5.0"
     },
     "scripts": {
         "build": "./node_modules/.bin/webpack",
