Fixed default image.

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -19,6 +19,8 @@ RUN mkdir -p /work/ && mkdir -p /work/logs
 
 VOLUME /work/logs
 
+COPY default-product-image.png /work
+
 COPY requirements.txt /work
 
 RUN pip install -r /work/requirements.txt
